--- a/_scss/_navbar.scss
+++ b/_scss/_navbar.scss
@@ -1,8 +1,12 @@
 nav.navbar {
   background: #fff;
+  border-bottom: 1px solid #e5e5e5;
   .navbar-toggler {
     background:#eee;
     color:#333333;
+  }
+  .navbar-brand {
+    color: $text;
   }
   ul {
     li {
