--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="/favicon.ico?v=2">
 	<link rel="canonical" href="{{site.url}}{{page.url}}">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,7 +28,13 @@
 	{% include google-analytics-fallback.html %}
 	<div id="wrapper">
 
-		{% include header.html %} {{ content }} {% include footer.html %} {% include scripts.html %} {% include crazy-egg.html %}
+		{% include header.html %}
+		<div id="page-content-wrapper">
+			{{ content }}
+			{% include footer.html %}
+		</div>
+	  {% include scripts.html %}
+		{% include crazy-egg.html %}
 	</div>
 </div>
 
